# rules_erlang

./: .bazelrc  .gitattributes  .gitignore  .mergify.yml  BUILD.bazel  BUILD.thoas  CONTRIBUTING.md  LICENSE  LICENSE-APACHE2  MODULE.bazel  README.md  WORKSPACE.bazel  WORKSPACE.bzlmod  app_file.bzl  app_file.template  app_file2.bzl  app_with_mod_file.template  bazel_erlang.bzl  bazel_erlang_app.bzl  bazel_erlang_lib.bzl  beam.bzl  common_root_as_var.bzl  compile_many.bzl  ct.bzl  ct_sharded.bzl  dialyze.bzl  erl_analyze.bzl  erl_eval.bzl  erl_libs.bzl  erlang_app.bzl  erlang_app_info.bzl  erlang_app_sources.bzl  erlang_app_sources_analysis.bzl  erlang_asn1.bzl  erlang_autodetect.bzl  erlang_bytecode.bzl  erlang_bytecode2.bzl  erlang_bytecode_pw.bzl  erlang_dia.bzl  erlang_home.bzl  (+31 more)
app_file_tool/: BUILD.bazel
app_file_tool/ebin/: app_file_tool.app
app_file_tool/jsx/: BUILD.bazel
app_file_tool/src/: app_file_tool.erl
bzlmod/: otp.bzl  (+5 more)
compile_first/: BUILD.bazel
examples/basic/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md
examples/basic/src/: basic.app.src  basic.erl
examples/basic/test/: basic_tests.erl
gazelle/: BUILD.bazel  README.md  configure.go  def.bzl  deps.bzl  dot_app_parser.go  dot_app_to_json.sh  erl_attrs_to_json.sh  erl_parser.go  erl_parser_impl.go  erlang_app.go  erlang_app_builder.go  erlang_test.go  fix.go  generate.go  github_com.go  hex_metadata_config_to_json.sh  hex_metadata_parser.go  hex_pm.go  kinds.go  language.go  moduleindex.bzl  moduleindex.go  mutable_set.go  rebar_config_parser.go  rebar_config_to_json.sh  resolve.go  tar.go  tar_gz.go  update.go  util.go
gazelle/erl_attrs_to_json/: BUILD.bazel
gazelle/erl_attrs_to_json/src/: erl_attrs_to_json.erl
gazelle/fetch/: BUILD.bazel  fetch.go  github.go  hex_pm.go  tar.go
gazelle/mutable_set/: BUILD.bazel  mutable_set.go
gazelle/slices/: BUILD.bazel  slices.go
gazelle/testdata/basic_hex_tar/: BUILD.out
gazelle/testdata/basic_hex_tar_no_tests/: BUILD.in  BUILD.out
gazelle/testdata/basic_rebar/: .gitignore  BUILD.out  rebar.config
gazelle/testdata/basic_rebar_gen_macro/: BUILD.out  LICENSE
gazelle/testdata/basic_rebar_gen_macro/src/: seshat.app.src
gazelle/testdata/rebar_with_ct_suites/: BUILD.out
shard_suite/: BUILD.bazel
shard_suite/src/: shard_suite.erl
shard_suite/test/: example_suite.erl  shard_suite_SUITE.erl
test/: .bazelrc  .gitignore  BUILD.bazel  BUILD.thoas  MODULE.bazel  WORKSPACE.bazel  WORKSPACE.bzlmod  go.mod  go.sum
test/app_file/: BUILD.bazel  myapp.app.src  test_applications_preserved.sh
test/custom_vars/: BUILD.bazel  custom_var_test.sh
test/dot_app_to_json/: BUILD.bazel
test/dot_app_to_json/test/: basic.app.src  dot_app_to_json_SUITE.erl
test/erl_attrs_to_json/: BUILD.bazel
test/erl_attrs_to_json/test/: basic.erl  basic.hrl  erl_attrs_to_json_SUITE.erl  parser_SUITE.erl
test/erl_attrs_to_json/test/erl_attrs_to_json_SUITE_data/: basic.erl  test.erl
test/erl_attrs_to_json_gazelle/: BUILD.bazel
test/erl_attrs_to_json_gazelle/test/: erl_attrs_to_json_gazelle_SUITE.erl
test/erl_attrs_to_json_worker/: BUILD.bazel
test/erl_attrs_to_json_worker/test/: erl_attrs_to_json_worker_SUITE.erl
test/extract_many_tool/: BUILD.bazel
test/gazelle/: BUILD.bazel  erlang_test.go  fake_erl_parser.go  fetch_test.go  integration_test.go  mutable_set_matchers.go  mutable_set_test.go  update_test.go
test/gazelle/testdata/basic_hex_tar/: BUILD.out
test/gazelle/testdata/basic_hex_tar_no_tests/: BUILD.in  BUILD.out  CHECKSUM  metadata.config
test/gazelle/testdata/basic_rebar/: BUILD.out
test/gazelle/testdata/basic_rebar_compact_rules/: BUILD.in  BUILD.out  test.yaml
test/gazelle/testdata/basic_rebar_gen_macro/: BUILD.in  BUILD.out  Makefile  README.md
test/rebar_config_to_erlc_opts/: BUILD.bazel
test/rebar_config_to_erlc_opts/test/: rebar_config_to_erlc_opts_SUITE.erl
test/rebar_config_to_json/: BUILD.bazel
test/rebar_config_to_json/test/: rebar.config  rebar_config_to_json_SUITE.erl
test/rules_erlang_compiler/: BUILD.bazel
test/rules_erlang_compiler/test/: compile_opts_SUITE.erl  digraph_tools_SUITE.erl  dot_app_file_SUITE.erl  executor_SUITE.erl  rules_erlang_compiler_SUITE.erl
test/shard_suite/: BUILD.bazel
test/shard_suite/test/: example_suite_missing_group.erl  shard_suite_SUITE.erl  shard_suite_test.erl
tools/: BUILD.bazel  erlang.bzl  erlang_headers.bzl  erlang_installation.bzl  erlang_toolchain.bzl  erlang_vars.bzl
tools/app_file_tool/: BUILD.bazel  app_file_tool.bzl
tools/app_file_tool/src/: app_file_tool.erl
tools/assert_applications/: BUILD.bazel
tools/assert_applications/src/: assert_applications.erl
tools/compile_first/: BUILD.bazel  compile_first.bzl
tools/compile_first/src/: compile_first.erl
tools/cover_report/: BUILD.bazel
tools/cover_report/src/: cover_report.erl
tools/coverdata_to_lcov/: BUILD.bazel
tools/coverdata_to_lcov/src/: coverdata_to_lcov.erl
tools/erl_attrs_to_json/: BUILD.bazel
tools/erl_attrs_to_json/include/: erl_attrs_to_json.hrl
tools/erl_attrs_to_json/src/: erl_attrs_to_json.erl  parser.erl
tools/erl_attrs_to_json_gazelle/: BUILD.bazel
tools/erl_attrs_to_json_gazelle/src/: erl_attrs_to_json_gazelle.erl
tools/erl_attrs_to_json_worker/: BUILD.bazel
tools/erl_attrs_to_json_worker/src/: erl_attrs_to_json_worker.erl
tools/erlc_persistent_worker/: BUILD.bazel  main.go  worker_wrapper.bzl
tools/erlc_persistent_worker/src/: erlc_persistent_worker.erl
tools/extract_many_tool/: BUILD.bazel
tools/extract_many_tool/src/: extract_many_tool.erl
tools/rebar_config_to_erlc_opts/: BUILD.bazel
tools/rebar_config_to_erlc_opts/src/: rebar_config.erl  rebar_config_to_erlc_opts.erl
tools/rules_erlang_compiler/: BUILD.bazel
tools/rules_erlang_compiler/src/: cas.erl  compile_opts.erl  compiler.erl  config_file.erl  digraph_tools.erl  dot_app_file.erl  executor.erl  flags_file.erl  parallel_compiler.erl  rules_erlang_compiler.erl  types.hrl
tools/shard_suite/: BUILD.bazel  shard_suite.bzl
tools/shard_suite/src/: shard_suite.erl
tools/xref_runner/: BUILD.bazel
(+91 files in other folders)
