load(
    "@bazel_skylib//rules:common_settings.bzl",
    "string_flag",
)
load(
    "//tools:erlang.bzl",
    "erlang_toolchain_external",
)

config_setting(
    name = "debug_build",
    values = {
        "compilation_mode": "dbg",
    },
)

string_flag(
    name = "erlang_home",
    build_setting_default = "",
    visibility = ["//visibility:public"],
)

string_flag(
    name = "erlang_version",
    build_setting_default = "",
    visibility = ["//visibility:public"],
)

erlang_toolchain_external()
