load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load("@bazel_gazelle//:def.bzl", "gazelle")

config_setting(
    name = "debug_build",
    values = {
        "compilation_mode": "dbg",
    },
)

string_flag(
    name = "erlang_home",
    build_setting_default = "",
    visibility = ["//visibility:public"],
)

string_flag(
    name = "erlang_version",
    build_setting_default = "",
    visibility = ["//visibility:public"],
)

string_flag(
    name = "ct_logdir",
    build_setting_default = "",
    visibility = ["//visibility:public"],
)

string_flag(
    name = "ct_test_windows_logdir_drive_letter",
    build_setting_default = "b",
    visibility = ["//visibility:public"],
)

# Gazelle configuration options.
# See https://github.com/bazelbuild/bazel-gazelle#running-gazelle-with-bazel
# gazelle:prefix github.com/rabbitmq/rules_erlang
# gazelle:exclude bazel-out
gazelle(name = "gazelle")

gazelle(
    name = "update_go_deps",
    args = [
        "-from_file=go.mod",
        "-to_macro=gazelle/deps.bzl%gazelle_deps",
        "-prune",
    ],
    command = "update-repos",
)
