load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load(":util_test.bzl", "util_test_suite")

config_setting(
    name = "debug_build",
    values = {
        "compilation_mode": "dbg",
    },
)

string_flag(
    name = "erlang_home",
    build_setting_default = "",
    visibility = ["//visibility:public"],
)

string_flag(
    name = "erlang_version",
    build_setting_default = "",
    visibility = ["//visibility:public"],
)

string_flag(
    name = "ct_logdir",
    build_setting_default = "",
    visibility = ["//visibility:public"],
)

string_flag(
    name = "ct_test_windows_logdir_drive_letter",
    build_setting_default = "b",
    visibility = ["//visibility:public"],
)

util_test_suite(name = "util_tests")
