module(
    name = "rules_erlang",
    version = "2.5.2",
    compatibility_level = 2,
)

bazel_dep(
    name = "bazel_skylib",
    version = "1.2.0",
)

erlang_package = use_extension(
    "//bzlmod:extensions.bzl",
    "erlang_package",
)

erlang_package.otp_default()

use_repo(
    erlang_package,
    "otp_default",
    "getopt_src",
    "xref_runner_src",
)
