module(
    name = "rules_erlang",
    compatibility_level = 3,
    version = "3.8.5",
)

bazel_dep(
    name = "rules_go",
    version = "0.35.0",
    repo_name = "io_bazel_rules_go",
)

bazel_dep(
    name = "rules_pkg",
    version = "0.5.1",
)
bazel_dep(
    name = "bazel_skylib",
    version = "1.3.0",
)

bazel_dep(
    name = "gazelle",
    version = "0.28.0",
    repo_name = "bazel_gazelle",
)

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "@bazel_gazelle//:go.mod")
use_repo(
    go_deps,
    "com_github_bazelbuild_buildtools",
    # Used internally by the go_deps module extension.
    "bazel_gazelle_go_repository_directives",
)

erlang_package = use_extension(
    "//bzlmod:extensions.bzl",
    "erlang_package",
)

use_repo(
    erlang_package,
    "getopt_src",
    "xref_runner_src",
)

erlang_config_extension = use_extension(
    "@rules_erlang//bzlmod:extensions.bzl",
    "erlang_config",
)

use_repo(
    erlang_config_extension,
    "erlang_config",
)

register_toolchains(
    "@erlang_config//external:toolchain",
    "@erlang_config//external:toolchain2",
)
