load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "bazel_skylib",
    sha256 = "af87959afe497dc8dfd4c6cb66e1279cb98ccc84284619ebfec27d9c09a903de",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/bazel-skylib/releases/download/1.2.0/bazel-skylib-1.2.0.tar.gz",
        "https://github.com/bazelbuild/bazel-skylib/releases/download/1.2.0/bazel-skylib-1.2.0.tar.gz",
    ],
)

load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")

bazel_skylib_workspace()

load(":rules_erlang.bzl", "rules_erlang_dependencies")

rules_erlang_dependencies(rules_erlang_workspace = "@")

register_execution_platforms(
    "//:erlang_external_platform",
)

register_toolchains(
    "//tools:erlang_external_toolchain",
    # "@otp_default//:erlang_linux_toolchain",
)
