workspace(name = "rules_erlang")

load(":internal_deps.bzl", "rules_erlang_internal_deps")

rules_erlang_internal_deps()

load(":internal_setup.bzl", "rules_erlang_internal_setup")

rules_erlang_internal_setup()

load("//gazelle:deps.bzl", "gazelle_deps")

# gazelle:repository_macro gazelle/deps.bzl%gazelle_deps
gazelle_deps()

load(":rules_erlang.bzl", "erlang_config")

erlang_config(rules_erlang_workspace = "@")

load("@erlang_config//:defaults.bzl", "register_defaults")

register_defaults()
