load("//:erlc.bzl", "erlc")
load("//:erlang_app_info.bzl", "erlang_app_info")
load("//private:escript.bzl", "escript_private")

APP_NAME = "app_file_tool"

erlc(
    name = "beam_files",
    srcs = glob(["src/**/*.erl"]),
    hdrs = glob([
        "include/**/*.hrl",
        "src/**/*.hrl",
    ]),
    dest = "ebin",
    erlc_opts = [
        "+deterministic",
        "+debug_info",
    ],
)

erlang_app_info(
    name = "erlang_app",
    hdrs = glob(["include/**/*.hrl"]),
    app = "ebin/app_file_tool.app",
    app_name = APP_NAME,
    beam = [":beam_files"],
    visibility = ["//visibility:public"],
    deps = [
        "//app_file_tool/jsx:erlang_app",
    ],
)

escript_private(
    name = "escript",
    out = "escript/app_file_tool",
    app = ":erlang_app",
    visibility = ["//visibility:public"],
)
