load("//private:erlc.bzl", "erlc_private")
load("//:erl_eval.bzl", "erl_eval")

erlc_private(
    name = "beam",
    srcs = [
        "src/compile_first.erl",
    ],
)

erl_eval(
    name = "escript",
    srcs = [
        ":beam",
    ],
    outs = [
        "escript/compile_first",
    ],
    expression = """
io:format("Assembiling compile_first escript...~n", []),
Beam = os:getenv("SRCS"),
Dest = os:getenv("OUTS"),
ok = escript:create(Dest,
                    [shebang, comment,
                     {beam, Beam}]),
io:format("done.~n", []),
halt().
""",
    visibility = ["//visibility:public"],
)
