load("@bazel_gazelle//:def.bzl", "gazelle_binary")
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gazelle",
    srcs = [
        "configure.go",
        "dot_app_parser.go",
        "erl_parser.go",
        "fix.go",
        "generate.go",
        "hex_metadata_parser.go",
        "kinds.go",
        "language.go",
        "rebar_config_parser.go",
        "resolve.go",
        "tar_gz.go",
        "update.go",
        "util.go",
    ],
    importpath = "github.com/rabbitmq/rules_erlang/gazelle",
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_gazelle//config:go_default_library",
        "@bazel_gazelle//label:go_default_library",
        "@bazel_gazelle//language:go_default_library",
        "@bazel_gazelle//repo:go_default_library",
        "@bazel_gazelle//resolve:go_default_library",
        "@bazel_gazelle//rule:go_default_library",
        "@com_github_bazelbuild_buildtools//build:go_default_library",
        "@com_github_emirpasic_gods//lists/singlylinkedlist",
        "@com_github_emirpasic_gods//sets/treeset",
        "@com_github_emirpasic_gods//utils",
        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
    ],
)

sh_binary(
    name = "dot_app_to_json",
    srcs = ["dot_app_to_json.sh"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "erl_attrs_to_json",
    srcs = ["erl_attrs_to_json.sh"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "hex_metadata_config_to_json",
    srcs = ["hex_metadata_config_to_json.sh"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "rebar_config_to_json",
    srcs = ["rebar_config_to_json.sh"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "gazelle_test",
    srcs = ["erlang_test.go"],
    data = [
        ":gazelle_erlang_binary",
        ":dot_app_to_json",
        ":erl_attrs_to_json",
        ":hex_metadata_config_to_json",
        ":rebar_config_to_json",
        # ":parse",
        # ":std_modules",
    ] + glob(["testdata/**"]),
    deps = [
        "@bazel_gazelle//testtools:go_default_library",
        "@com_github_emirpasic_gods//lists/singlylinkedlist",
        "@com_github_ghodss_yaml//:yaml",
        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
    ],
)

gazelle_binary(
    name = "gazelle_erlang_binary",
    languages = ["//gazelle"],
    visibility = ["//visibility:public"],
)
