load("@rules_erlang//:erl_eval.bzl", "erl_eval")
load("@rules_erlang//:shell.bzl", "shell")

platform(
    name = "erlang_internal_platform",
    constraint_values = [
        "@erlang_config//:erlang_internal",
    ],
    parents = ["@rbe//config:platform"],
)

# define an alias for @erlang_config//:erlang_26_platform, so
# that it can be passed in the cli/.bazelrc and not encounter
# the lack of mapping, as per
# https://github.com/bazelbuild/bazel/issues/14852
alias(
    name = "erlang_26_platform",
    actual = "@erlang_config//:erlang_26_platform",
)

erl_eval(
    name = "otp_version",
    outs = ["otp_version.txt"],
    expression = """\
{ok, Version} =\
    file:read_file(\
        filename:join([\
            code:root_dir(),\
            "releases",\
            erlang:system_info(otp_release),\
            "OTP_VERSION"])\
    ),\
file:write_file(os:getenv("OUTS"), Version),\
halt().""",
)

shell(
    name = "repl",
)
