module(
    name = "rules_erlang_test",
    version = "0.1.0",
)

bazel_dep(
    name = "rules_erlang",
    version = "3.0.0",
)

local_path_override(
    module_name = "rules_erlang",
    path = "..",
)

erlang_config_extension = use_extension(
    "@rules_erlang//bzlmod:extensions.bzl",
    "erlang_config",
    dev_dependency = True,
)

erlang_config_extension.internal_erlang_from_github_release()

use_repo(
    erlang_config_extension,
    "erlang_config",
)

register_toolchains(
    "@erlang_config//internal:toolchain",
)
