module(
    name = "rules_erlang_test",
    version = "0.1.0",
)

bazel_dep(
    name = "platforms",
    version = "0.0.5",
)
bazel_dep(
    name = "rules_go",
    repo_name = "io_bazel_rules_go",
    version = "0.37.0",
)
bazel_dep(
    name = "gazelle",
    repo_name = "bazel_gazelle",
    version = "0.28.0",
)
bazel_dep(
    name = "rules_erlang",
    version = "3.0.0",
)

local_path_override(
    module_name = "rules_erlang",
    path = "..",
)

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")

go_deps.from_file(go_mod = "@rules_erlang_test//:go.mod")

use_repo(
    go_deps,
    "com_github_bazelbuild_buildtools",
    "com_github_emirpasic_gods",
    "com_github_ghodss_yaml",
    "com_github_onsi_ginkgo_v2",
    "com_github_onsi_gomega",
)

erlang_config_extension = use_extension(
    "@rules_erlang//bzlmod:extensions.bzl",
    "erlang_config",
    dev_dependency = True,
)

erlang_config_extension.internal_erlang_from_github_release()

use_repo(
    erlang_config_extension,
    "erlang_config",
)

register_toolchains(
    "@erlang_config//internal:toolchain",
    "@erlang_config//internal:toolchain2",
)

erlang_package = use_extension(
    "@rules_erlang//bzlmod:extensions.bzl",
    "erlang_package",
    dev_dependency = True,
)

erlang_package.hex_package(
    name = "thoas",
    build_file = "@//:BUILD.thoas",
    sha256 = "442296847aca11db8d25180693d7ca3073d6d7179f66952f07b16415306513b6",
    version = "0.4.0",
)

use_repo(
    erlang_package,
    "thoas",
)
