module(
    name = "rules_erlang_test",
    version = "0.1.0",
)

bazel_dep(
    name = "platforms",
    version = "0.0.7",
)
bazel_dep(
    name = "rules_erlang",
    version = "3.0.0",
)
local_path_override(
    module_name = "rules_erlang",
    path = "..",
)

erlang_config_extension = use_extension(
    "@rules_erlang//bzlmod:extensions.bzl",
    "erlang_config",
    dev_dependency = True,
)
erlang_config_extension.internal_erlang_from_github_release()
use_repo(
    erlang_config_extension,
    "erlang_config",
)

register_toolchains(
    "@erlang_config//internal:toolchain_major",
    "@erlang_config//internal:toolchain_major_minor",
)

erlang_package = use_extension(
    "@rules_erlang//bzlmod:extensions.bzl",
    "erlang_package",
    dev_dependency = True,
)
erlang_package.hex_package(
    name = "thoas",
    build_file = "@//:BUILD.thoas",
    sha256 = "fc763185b932ecb32a554fb735ee03c3b6b1b31366077a2427d2a97f3bd26735",
    version = "1.0.0",
)
use_repo(
    erlang_package,
    "thoas",
)
