load(
    "//private:erlang_build.bzl",
    "erlang_external",
)
load(
    ":erlang_toolchain.bzl",
    "erlang_toolchain",
)

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

erlang_external(
    name = "otp",
)

erlang_toolchain(
    name = "erlang_external",
    otp = ":otp",
)

toolchain(
    name = "erlang_external_toolchain",
    # exec_compatible_with = [
    #     "//:erlang_external",
    # ],
    target_compatible_with = [
        "//:erlang_external",
    ],
    toolchain = ":erlang_external",
    toolchain_type = ":toolchain_type",
    visibility = ["//visibility:public"],
)

# erlang_tool(
#     name = "erl",
#     otp = ":otp",
#     path = "bin/erl",
#     visibility = ["//visibility:public"],
# )

# erlang_tool(
#     name = "erlc",
#     otp = ":otp",
#     path = "bin/erlc",
#     visibility = ["//visibility:public"],
# )

# erlang_tool(
#     name = "escript",
#     otp = ":otp",
#     path = "bin/escript",
#     visibility = ["//visibility:public"],
# )

# erlang_installation(
#     name = "erlang_installation_minimal",
#     otp = ":otp",
#     erl = ":erl",
#     erlc = ":erlc",
#     escript = ":escript",
# )

# erlang_bytecode(
#     name = "app_file_tool_beam",
#     srcs = [
#         Label("//tools/app_file_tool:src/app_file_tool.erl"),
#     ],
#     erlc_opts = ERLC_OPTS,
#     toolchains = [":toolchain_type"],
# )

# escript_flat(
#     name = "app_file_tool",
#     erlang_installation = ":erlang_installation_minimal",
#     beam = ":app_file_tool_beam",
# )

# erlang_bytecode(
#     name = "compile_first_beam",
#     erlang_installation = ":erlang_installation_minimal",
#     erlc_opts = ERLC_OPTS,
#     srcs = [
#         Label("//tools/compile_first:src/compile_first.erl"),
#     ],
# )

# escript_flat(
#     name = "compile_first",
#     erlang_installation = ":erlang_installation_minimal",
#     beam = ":compile_first_beam",
# )

# erlang_bytecode(
#     name = "shard_suite_beam",
#     dest = "alt",
#     erlang_installation = ":erlang_installation_minimal",
#     erlc_opts = ERLC_OPTS,
#     srcs = [
#         Label("//tools/shard_suite:src/shard_suite.erl"),
#     ],
# )

# escript_flat(
#     name = "shard_suite",
#     erlang_installation = ":erlang_installation_minimal",
#     beam = ":shard_suite_beam",
# )

# erlang_installation(
#     name = "erlang_installation_compilation",
#     otp = ":otp",
#     erl = ":erl",
#     erlc = ":erlc",
#     escript = ":escript",
#     app_file_tool = ":app_file_tool",
#     compile_first = ":compile_first",
#     visibility = ["//:__subpackages__"],
# )

# erlang_installation(
#     name = "erlang_installation",
#     otp = ":otp",
#     erl = ":erl",
#     erlc = ":erlc",
#     escript = ":escript",
#     app_file_tool = ":app_file_tool",
#     compile_first = ":compile_first",
#     shard_suite = ":shard_suite",
#     xrefr = "//bazel/xref_runner:xrefr",
#     visibility = ["//visibility:public"],
# )
