load(
    "//private:erlang_build.bzl",
    "erlang_external",
)
load(
    ":erlang_toolchain.bzl",
    "erlang_toolchain",
)

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

erlang_external(
    name = "otp",
)

erlang_toolchain(
    name = "erlang_external",
    otp = ":otp",
)

toolchain(
    name = "erlang_external_toolchain",
    # exec_compatible_with = [
    #     "//:erlang_external",
    # ],
    target_compatible_with = [
        "//:erlang_external",
    ],
    toolchain = ":erlang_external",
    toolchain_type = ":toolchain_type",
    visibility = ["//visibility:public"],
)
