load("//tools:erlang_headers.bzl", "erlang_headers")
load("//tools:erlang_vars.bzl", "erlang_vars")

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

erlang_headers(
    name = "erlang_headers",
    visibility = ["//visibility:public"],
)

erlang_vars(
    name = "erlang_vars",
    visibility = ["//visibility:public"],
)
