load("@rules_erlang//:app_file.bzl", "app_file")

app_file(
    name = "app_file",
    app_name = "myapp",
    app_src = ["myapp.app.src"],
    tags = ["manual"],
)

sh_test(
    name = "test_applications_preserved",
    srcs = [":test_applications_preserved.sh"],
    args = ["$(location :app_file)"],
    data = [":app_file"],
)
