genrule(
    name = "show_custom_var",
    srcs = [],
    outs = ["custom_var"],
    cmd = 'echo "OTP_VERSION: $(OTP_VERSION)" > $@',
    target_compatible_with = [
        "@erlang_config//:erlang_24",
    ],
    # genrule toolchains are not resolved in the same manner of
    # custom rules, so we simulate it with select in this case
    toolchains = select({
        "@erlang_config//:erlang_24": ["@erlang_config//internal:erlang"],
        "//conditions:default": [],
    }),
)

sh_test(
    name = "custom_var_test",
    srcs = ["custom_var_test.sh"],
    data = [":show_custom_var"],
)
