genrule(
    name = "show_custom_var",
    srcs = [],
    outs = ["custom_var"],
    cmd = 'echo "OTP_VERSION: $(OTP_VERSION)" > $@',
    toolchains = ["@rules_erlang//tools:erlang_vars"],
)

sh_test(
    name = "custom_var_test",
    srcs = ["custom_var_test.sh"],
    data = [":show_custom_var"],
)
